--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm index"
+    "start": "node index"
   },
   "author": "",
   "license": "ISC"
