--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "bootstrap-select-country": "^4.1.0",
     "chart.js": "^2.9.3",
     "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "toastr": "^2.1.4"
+    "express": "^4.17.1"
   },
   "devDependencies": {},
   "scripts": {
